--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -2,12 +2,11 @@ name: Ruby
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+      - master
 
 jobs:
-  test:
+  build:
 
     runs-on: ubuntu-latest
 
@@ -25,3 +24,14 @@ jobs:
         ruby-version: 2.6.3
     - name: Install dependencies
       run: bundle install --without development
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: akhileshns/heroku-deploy@v3.0.4
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: permit-admin
+          heroku_email: ${{ secrets.EMAIL }}
