--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@
 #
 default: &default
   adapter: postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  pool: 5
   timeout: 5000
 
 development:
@@ -20,6 +20,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  database: permit-admin-test
 
 production:
   <<: *default
