--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -32,6 +32,8 @@ jobs:
       run: bundle install --without development
     - name: Run rubocop
       run: bundle exec rubocop .
+    - name: Run rspec tests
+      run: bundle exec rspec spec
 
   deploy:
     needs: build
