--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,6 +1,6 @@
  amazon:
    service: S3
-   access_key_id:
-   secret_access_key:
+   access_key_id: <%= Rails.application.credentials.dig(:s3, :access_key_id) %>
+   secret_access_key: <%= Rails.application.credentials.dig(:s3, :secret_access_key) %>
    region: us-east-1
    bucket: permit-documents
