--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@ default: &default
 
 development:
   <<: *default
-  host: <%= ENV['DATABASE_TEST_HOST'] %>
+  host: localhost
   port: 5432
   database: permit-admin
 
